--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2024"
 [dependencies]
 bevy = { version = "0.17.3"}
 rand = "0.9.2"
+## Bevy Inspector Egui makes it easy to modify widgets at runtime.
+bevy-inspector-egui = "0.35.0"
 
-# Enable a small amount of optimization in the dev profile.
+
+
 [profile.dev]
 opt-level = 1
 panic="abort"
