feat:: basic water flow shader

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = { version = "0.17.3"}
+bevy = { version = "0.17.3", features = ["jpeg"]}
 rand = "0.9.2"
 ## Bevy Inspector Egui makes it easy to modify widgets at runtime.
 bevy-inspector-egui = "0.35.0"
